mass commit after starting rework

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 *.so
 
 credentials.json
+firebase_credentials.json
 
 .DS_Store
 # Distribution / packaging
@@ -28,6 +29,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+
 
 # Virtual environments
 venv/
