--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./ipq-frontend/.output/public
+          path: ./.output/ipq-frontend/public
 
   # Deployment job
   deploy:
